[feature]: deleting a complete wishlist
