# docs/swagger.yaml
@@ -154,7 +154,7 @@ paths:
       - APIToken: []
       summary: returns a list of books from google books
       tags:
-      - GoogleBooks
+      - Google Books
   /v1/login:
     post:
       description: Used login and get a new token
@@ -251,7 +251,7 @@ paths:
       - APIToken: []
       summary: returns wishlist of books
       tags:
-      - Books
+      - Wish List
     post:
       description: Used to create a wish list
       parameters:
@@ -292,8 +292,44 @@ paths:
       - APIToken: []
       summary: create or update a wish list for books
       tags:
-      - Books
+      - Wish List
   /v1/wishlists/{id}:
+    delete:
+      description: all books from a wishlist will be removed
+      parameters:
+      - description: WishListID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.SuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/entity.FailureResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/entity.FailureResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/entity.FailureResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/entity.FailureResponse'
+      security:
+      - APIToken: []
+      summary: removing a complete wishlist
+      tags:
+      - Wish List
     get:
       description: List of books from google saved in datastore
       parameters:
@@ -325,7 +361,7 @@ paths:
       - APIToken: []
       summary: returns wishlist of books
       tags:
-      - Books
+      - Wish List
   /v1/wishlists/{id}/books:
     post:
       description: adding a book into a wishlist and creating a new book if it doesn't
@@ -373,7 +409,7 @@ paths:
       - APIToken: []
       summary: adding a book into a wishlist
       tags:
-      - Books
+      - Books of Wish List
   /v1/wishlists/{id}/books/{bookid}:
     delete:
       description: removing a book from wishlist if it exists
@@ -407,10 +443,6 @@ paths:
           description: Forbidden
           schema:
             $ref: '#/definitions/entity.FailureResponse'
-        "409":
-          description: Conflict
-          schema:
-            $ref: '#/definitions/entity.FailureResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -419,7 +451,7 @@ paths:
       - APIToken: []
       summary: removing a book from wishlist
       tags:
-      - Books
+      - Books of Wish List
 securityDefinitions:
   APIToken:
     in: header
